fixed deprecated error